Create import group pipeline.